fix: schedule heading-alignment

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -12,6 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	align-items: center;
 	padding: 0 10%;
 	padding-top: 5rem;
 	margin: auto;
